--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,5 +5,9 @@
   "username": "root",
   "password": "mysql",
   "database": "marketx",
-  "entities": ["dist/domain/**/entities/*.entity{.ts,.js}"]
+  "entities": ["dist/domain/**/entities/*.entity{.ts,.js}"],
+  "migrations": ["src/infra/data/mysql/migrations/*.ts"],
+  "cli": {
+    "migrationsDir": "src/infra/data/mysql/migrations"
+  }
 }
