--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
@@ -42,8 +44,10 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
